@@ -481,53 +481,53 @@
         </profile>
 
 
-        <profile>
-            <id>macos-arm64</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                    <arch>aarch64</arch>
-                </os>
-            </activation>
-            <build>
-                <plugins>
+<!--        <profile>-->
+<!--            <id>macos-arm64</id>-->
+<!--            <activation>-->
+<!--                <os>-->
+<!--                    <family>mac</family>-->
+<!--                    <arch>aarch64</arch>-->
+<!--                </os>-->
+<!--            </activation>-->
+<!--            <build>-->
+<!--                <plugins>-->
 
 
-                    <plugin>
-                        <groupId>io.github.fvarrui</groupId>
-                        <artifactId>javapackager</artifactId>
-                        <version>1.7.6</version>
-                        <executions>
-                            <execution>
-                                <id>bundling-for-macos-arm64</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package</goal>
-                                </goals>
-                                <configuration>
-                                    <platform>mac</platform>
-                                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
-                                    <bundleJre>true</bundleJre>
-                                    <createTarball>false</createTarball>
-                                    <generateInstaller>false</generateInstaller>
-                                    <jdkPath>${env.JAVA_HOME}</jdkPath>
-                                    <macConfig>
-                                        <icnsFile>src/main/resources/icon/redis256.icns</icnsFile>
-                                        <entitlements>src/main/resources/assets/entitlements.plist</entitlements>
-                                    </macConfig>
-                                    <vmArgs>
-                                        <arg>--module-path</arg>
-                                        <arg>libs</arg>
-                                        <arg>--add-modules</arg>
-                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>
-                                    </vmArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
+<!--                    <plugin>-->
+<!--                        <groupId>io.github.fvarrui</groupId>-->
+<!--                        <artifactId>javapackager</artifactId>-->
+<!--                        <version>1.7.6</version>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>bundling-for-macos-arm64</id>-->
+<!--                                <phase>package</phase>-->
+<!--                                <goals>-->
+<!--                                    <goal>package</goal>-->
+<!--                                </goals>-->
+<!--                                <configuration>-->
+<!--                                    <platform>mac</platform>-->
+<!--                                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>-->
+<!--                                    <bundleJre>true</bundleJre>-->
+<!--                                    <createTarball>false</createTarball>-->
+<!--                                    <generateInstaller>false</generateInstaller>-->
+<!--                                    <jdkPath>${env.JAVA_HOME}</jdkPath>-->
+<!--                                    <macConfig>-->
+<!--                                        <icnsFile>src/main/resources/icon/redis256.icns</icnsFile>-->
+<!--                                        <entitlements>src/main/resources/assets/entitlements.plist</entitlements>-->
+<!--                                    </macConfig>-->
+<!--                                    <vmArgs>-->
+<!--                                        <arg>&#45;&#45;module-path</arg>-->
+<!--                                        <arg>libs</arg>-->
+<!--                                        <arg>&#45;&#45;add-modules</arg>-->
+<!--                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>-->
+<!--                                    </vmArgs>-->
+<!--                                </configuration>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+<!--        </profile>-->
 
 
 
